LIST OF CHANGES FOR NPG-QC PACKAGE

release 72.0.0

 - QC View sorting order to put merged lanes before unmerged.
 - Simplify schema exclusions now the tables are gone
 - Fix QC change doc to use transaction as intended
 - Update tag sniff pod and deps
 - Force one-page API response for tag sets
 - Update README

release 71.1.0
 - Updated DBIC ORM following the production MySQL database server upgrade
   to MySQL v8.+
 - Fixed a problem with archival of incomplete genotyping autoqc results
 - Removed unused CI scripts
 - Removed listing of non-existing files fro MANIFEST
 - Fixed a warning when running the t/60-autoqc-results-result.t test

release 71.0.1
 - Change to Perl versions from Perlbrew for CI

release 71.0.0
 - Removed the plugin that enable to run the SeqQC server under the
   daemon utility. 
 - Updated SOP for changing QC outcomes

release 70.3.0
 - tag_sniff get list of known tags via a URL rather than the warehouse DB

release 70.2.1
 - update version of github actions

release 70.2.0
 - extend documentation for setting manual QC outcomes programmatically
 - change CI runner from Ubuntu 18.04 to ubuntu-latest

release 70.1.0
 - add haplotag metrics

release 70.0.2
 - fix missing apt pkgs for github actions

release 70.0.1
 - use bcftools mpileup instead of samtools for genotype QC check
 - npg_substitution_metrics.pl avoid negative values and made metrics calculations more consistent

release 70.0.0
 - Add substitution metrics (CtoA) QC check
 - Added SS tag_sequence to reported matches
 
release 69.12.0
 - Removed an unused script - genotype_call_results_reporter.
 - Switched the QC outcomes reporter to retrieve LIMS server URL from
   the configuration file that is used by other applications.
 - Update tableExport JavaScript package to version 1.26.0

release 69.11.1
 - Normalisation of negative controls with PhiX:
     1. added a script to compute linear regression stats,
     2. added a document that captures an interim projetc review.