@@ -1,0 +1,1 @@
+{"__CLASS__":"npg_qc::autoqc::results::pulldown_metrics-71.1.0","comments":"Failed to find bait interval files in repository for TWIST Respiratory Virus Research Panel","composition":{"__CLASS__":"npg_tracking::glossary::composition-98.1.0","components":[{"__CLASS__":"npg_tracking::glossary::composition::component::illumina-98.1.0","id_run":48367,"position":2,"tag_index":2}]},"id_run":48367,"info":{"Check":"npg_qc::autoqc::checks::pulldown_metrics","Check_version":"71.1.0"},"pass":"0","position":2,"tag_index":2}
